# overengineered-snakes

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  PKGBUILD  README.md  config.conf  main.py  pyproject.toml  snakes.conf  snakes.py  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: cd.yaml  ci.yaml  step_create_release.yaml  step_create_tag.yaml  step_precommit.yaml  step_unittests.yaml
docs/: mkdocs_common.yml
docs/langs/en/docs/: index.md
docs/langs/es/: mkdocs.yml
docs/langs/es/docs/: index.md
docs/scripts/: build_site.py
overengineered-snakes/: snakes.py
overengineered_snakes/: backend.py  handler.py  snakes.py
overengineered_snakes/backend/: mapa.py
overengineered_snakes/backend/behaviours/: simple.py
overengineered_snakes/backend/behaviours/tests/: test_simple_ai.py
overengineered_snakes/backend/behaviours/tests/strategies/: simple.py
overengineered_snakes/backend/tests/: test_mapa.py
overengineered_snakes/backend/tests/strategies/: mapa.py
overengineered_snakes/backend/tiles/: body.py  head.py  tile.py
overengineered_snakes/backend/tiles/tests/: test_head.py
overengineered_snakes/backend/tiles/tests/strategies/: head.py  tile.py
overengineered_snakes/cli/: parse_args.py
overengineered_snakes/configs/: config.py
overengineered_snakes/renderers/: abstract.py  curses.py
overengineered_snakes/renderers/tests/: test_curses_render.py
overengineered_snakes/tests/: test_handler.py
overengineered_snakes/tests/strategies/: handler.py
