[tool.poetry]
name = "overengineered-snakes"
version = "0.0.1"
description = "An inneccessarily overengineered little ZPG"
authors = ["Juan Toca <elan17.programacion@gmail.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "overengineered_snakes"}]
exclude = ["**/test*"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
snakes = "overengineered_snakes.snakes:main"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.0"
hypothesis = "^6.61.0"
commitizen = "^2.39.1"
coverage = {version="^7.1.0", extras=["toml"]}
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.2"
pymdown-extensions = "^9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = "overengineered_snaes/"
branch = true
